--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created br Ravina . It uses data from  weather stack.</p>
         <img class = "portrait" src="\img\Screenshot (1327).png" >
     </div>
     {{>footer}}
